--- a/publication.html
+++ b/publication.html
@@ -403,7 +403,7 @@
             </div>
             <br/>
             <div class="card card-publication">
-              <img class="card-img-top" style="width: 20%;" src="images/gallery-icon.png" alt="Card image cap">
+              <img class="card-img-top" style="width: 20%;" src="images/papers/paper7.png" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">An Evolutionary Population
                   Census Application Through Mobile Crowdsourcing</h5>
@@ -437,60 +437,6 @@
               </div>
             </div>
             <br/>
-
-            <!-- <ul style="list-style-type: square;"> -->
-              <!-- <li><strong>Ismail Hossain</strong>, Sai Puppala, Md. Jahangir Alam, and Talukder Sajedul,
-                <i>“A Visual Approach to Tracking Emotional Sentiment Dynamics in Social Network Commentaries” </i>,
-                The 2023 IEEE/ACM International Conference on
-                Advances in Social Networks Analysis and Mining <span style="color:blue;font-weight:bold">(IEEE/ACM
-                  ASONAM)</span>, Nov 2023.
-              </li> -->
-              <!-- <br/> -->
-              <!-- <li>Md. Jahangir Alam, <strong>Ismail Hossain</strong>, Sai Puppala, and Talukder Sajedul,
-                <i>“Combatting Identity Attacks in Online Social
-                  Networks: A Multi-Layered Framework Using
-                  Zero-Knowledge Proof and Permissioned Blockchain” </i>,
-                The 2023 IEEE/ACM International Conference on
-                Advances in Social Networks Analysis and Mining <span style="color:blue;font-weight:bold">(IEEE/ACM
-                  ASONAM)</span>, Nov 2023.
-              </li> -->
-              <!-- <br /> -->
-              <!-- <li>Sultan Ahmed, Md Jahangir Alam, Talukder Sajedul, and <strong>Ismail Hossain</strong>,
-                <i>“Combating Identity Misrepresentation in Social Media through Bangla
-                  Text-Driven Gender Recognition” </i>,
-                The 2023 IEEE/ACM International Conference on
-                Advances in Social Networks Analysis and Mining <span style="color:blue;font-weight:bold">(IEEE/ACM
-                  ASONAM)</span>, Nov 2023.
-              </li> -->
-              <!-- <br /> -->
-              <!-- <li><strong>Ismail Hossain</strong>, Sai Puppala, and Talukder Sajedul, <i>“Collaborative Differentially
-                  Private Federated Learning Framework for the Prediction of Diabetic Retinopathy”</i>, 2nd
-                International
-                Conference on Artificial Intelligence in Cybersecurity <span style="color:blue;font-weight:bold"> (IEEE
-                  ICAIC)</span>, Dec 2022.
-              </li> -->
-              <!-- <br />
-              <li>Sai Puppala, <strong>Ismail Hossain</strong>, and Talukder Sajedul, <i>“Towards Federated
-                  Learning-based
-                  Contraband Detection within Airport Baggage X-Rays”</i>, 3rd International Conference on Machine
-                Learning & Applied Network Technologies <span style="color:blue;font-weight:bold">(IEEE ICMLANT)</span>,
-                Nov 2022.
-              </li>
-              <br /> -->
-              <!-- <li>Sai Puppala, <strong>Ismail Hossain</strong>, and Talukder Sajedul, <i>“Machine Learning and
-                  Sentimental
-                  Analysis for Predicting Environment Lead Toxicity in Children at the ZIP Code Level”</i>, 2nd
-                International Conference on Artificial Intelligence in Cybersecurity <span
-                  style="color:blue;font-weight:bold">(IEEE ICAIC)</span>, Dec 2022.
-              </li>
-              <br /> -->
-              <!-- <li><strong>Ismail Hossain</strong>, Mohammad Hasan, and Zahid Hasan, <i>“An Evolutionary Population
-                  Census Application
-                  Through Mobile Crowdsourcing”</i>, 3rd International Conference on Intelligent Computing and
-                Optimization <span style="color:blue;font-weight:bold">(Springer ICICO),</span>, Oct 2020.
-              </li>
-              <br /> -->
-            <!-- </ul> -->
           </div>
 
           <div id="cpaper">
@@ -498,7 +444,7 @@
               <h6><strong>Book Chapters</strong></h6>
             </div>
             <div class="card card-publication">
-              <img class="card-img-top" style="width: 20%;" src="images/papers/paper6.png" alt="Card image cap">
+              <img class="card-img-top" style="width: 20%;" src="images/icons/book-icon.png" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Differentially Private Federated Learning in Medical Context: Phenomenal Classification of
                   Diabetic Retinopathy</h5>
@@ -529,7 +475,7 @@
             <br />
 
             <div class="card card-publication">
-              <img class="card-img-top" style="width: 20%;" src="images/papers/paper2.png" alt="Card image cap">
+              <img class="card-img-top" style="width: 20%;" src="images/icons/book-icon.png" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Introduction of Medical Imaging Modalities</h5>
                 <!-- <p class="card-text">Sultan Ahmed, Md Jahangir Alam, Talukder Sajedul, and <strong>Ismail Hossain</strong></p> -->
@@ -562,7 +508,7 @@
             <br/>
 
             <div class="card card-publication">
-              <img class="card-img-top" style="width: 20%;" src="images/papers/paper2.png" alt="Card image cap">
+              <img class="card-img-top" style="width: 20%;" src="images/icons/book-icon.png" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Active Learning on Medical Image</h5>
                 <!-- <p class="card-text">Sultan Ahmed, Md Jahangir Alam, Talukder Sajedul, and <strong>Ismail Hossain</strong></p> -->
@@ -595,7 +541,7 @@
             <br/>
 
             <div class="card card-publication">
-              <img class="card-img-top" style="width: 20%;" src="images/papers/paper2.png" alt="Card image cap">
+              <img class="card-img-top" style="width: 20%;" src="images/icons/book-icon.png" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">AutoML Systems For Medical Imaging</h5>
                 <!-- <p class="card-text">Sultan Ahmed, Md Jahangir Alam, Talukder Sajedul, and <strong>Ismail Hossain</strong></p> -->
