--- a/about.html
+++ b/about.html
@@ -183,6 +183,49 @@
             <ul class="ul-dates">
                <li>
                   <div class="content">
+                     <b>Teaching Assistant</b><br><span class="duration"></span>
+                     <div><i>January 2024 – Present</i>
+                     </div>
+                     <div><i>School of Computing</i>
+                     </div>
+                     <div>
+                        <ul>
+                           <li>Preparing lecture notes/slides on a given topic</li>
+                           <li>Conducting classes of "Design and Analysis of Algorithms" and "Learning from Data"</li>
+                           <li>Mentoring both Undergrad and Grad students</li>
+                           <li>Grading Quizzes, Assignments, Exams, Projects and Presentation</li>
+                         </ul>                         
+                     </div>
+                  </div>
+               </li>
+            </ul>
+            <ul class="ul-dates">
+               <li>
+                  <div class="content">
+                     <b>Research Assistant</b><br><span class="duration"></span>
+                     <div><i>August 2022 – Present</i>
+                     </div>
+                     <div><i>SUPREME Lab.</i>
+                     </div>
+                     <div>
+                        <ul>
+                           <li>Conduct in-depth literature reviews to understand the prior arts</li>
+                           <li>Collaborate with researchers to design, develop, and optimize algorithms</li>
+                           <li>Collect and analyze data for experiments, simulations, or data-driven research projects</li>
+                           <li>Write and maintain code for research projects, including feature engineering, model evaluation, and optimization</li>
+                           <li>Work with models like Transformers (BERT, GPT), CNN, RNN, LSTM, YOLO, Traditional (KNN, K-means, Random Forest, Decision Tree, Boosting, Bagging)</li>
+                           <li>Write the research papers at Overleaf collaboratively and prepare the presentations for conferences, and journals</li>
+                           <li>Assist in training and mentoring junior research assistants, and undergraduate students</li>
+                           <li>Participate in online Machine Learning and NLP competitions (e.g. Kaggle)</li>
+                           <li>Led a team for the Cyberforce23 competition</li>
+                         </ul>                         
+                     </div>
+                  </div>
+               </li>
+            </ul>
+            <ul class="ul-dates">
+               <li>
+                  <div class="content">
                      <b>Former Sr. Software Engineer</b><br><span class="duration"></span>
                      <div><i>February 2019 – August 2022</i>
                      </div>
@@ -203,7 +246,6 @@
                            <li>Completed 100+ Jira Tasks and resolved about 20+ PLM issues with the least TAT count[4.5]
                            </li>
                            <li>Best contributor in Aug’22 [800+ commits, 50+ Pull Request and 300+ reviews]</li>
-
                         </ul>
                      </div>
                   </div>
