resource page added

--- a/about.html
+++ b/about.html
@@ -80,6 +80,7 @@
          </li>
          <li><a class="nav-link text-color" href="blog.html">Blog</a></li>
          <li><a class="nav-link text-color" href="gallery.html">Gallery</a></li>
+         <li><a class="nav-link text-color" href="resources.html">Resources</a></li>
       </ul>
       </div>  
    </nav>
@@ -282,9 +283,11 @@
 
    <footer class="footer mt-auto py-3" style="background: rgb(138, 8, 8);">
       <div class="container">
-        <span class="text-light"><p>Copyright &copy; Ismail Hossain 2023 </p></span>
+         <span class="text-light">
+            <p>&copy; 2024 All Rights Reserve to Ismail Hossain </p>
+         </span>
       </div>
-    </footer>
+   </footer>  
 
 </body>
 </html>
