--- a/education.html
+++ b/education.html
@@ -80,6 +80,7 @@
          </li>
          <li><a class="nav-link text-color" href="blog.html">Blog</a></li>
          <li><a class="nav-link text-color" href="gallery.html">Gallery</a></li>
+         <li><a class="nav-link text-color" href="resources.html">Resources</a></li>
       </ul>
       </div>  
    </nav>
@@ -178,16 +179,13 @@
       </div>
     </footer>
 
-   <!-- <footer>
-      <div class="small-print">
-         <div class="container">
-            <p><a href="https://www2.cs.siu.edu/~stalukder/#">Terms &amp; Conditions</a> | <a
-                  href="https://www2.cs.siu.edu/~stalukder/#">Privacy Policy</a> | <a
-                  href="https://www2.cs.siu.edu/~stalukder/#">Contact</a></p>
-            <p>Copyright &copy; Ismail Hossain 2023 </p>
-         </div>
+    <footer class="footer mt-auto py-3" style="background: rgb(138, 8, 8);">
+      <div class="container">
+         <span class="text-light">
+            <p>&copy; 2024 All Rights Reserve to Ismail Hossain </p>
+         </span>
       </div>
-   </footer> -->
+   </footer>  
 
 </body>
 </html>
