--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
             </li>
             <li><a class="nav-link text-color" href="blog.html">Blog</a></li>
             <li><a class="nav-link text-color" href="gallery.html">Gallery</a></li>
+            <!-- <li><a class="nav-link text-color" href="skills.html">Skills</a></li> -->
+            <li><a class="nav-link text-color" href="resources.html">Resources</a></li>
          </ul>
       </div>
 
@@ -281,10 +283,15 @@
       <footer class="footer mt-auto py-3" style="background: rgb(138, 8, 8);">
          <div class="container">
             <span class="text-light">
-               <p>Copyright &copy; Ismail Hossain 2023 </p>
+               <p>&copy; 2024 All Rights Reserve to Ismail Hossain </p>
             </span>
          </div>
       </footer>
+      
+      <!-- <include src="footer.html"></include> -->
+
+      <!-- <link href="footer.html" rel="import" /> -->
+      <!-- <div w3-include-html="C:\\Users\\ismai\\Documents\\ismail102.github.io\\footer.html"></div> -->
 </body>
 
 </html>
