--- a/publication.html
+++ b/publication.html
@@ -90,6 +90,7 @@
           </li>
           <li><a class="nav-link text-color" href="blog.html">Blog</a></li>
           <li><a class="nav-link text-color" href="gallery.html">Gallery</a></li>
+          <li><a class="nav-link text-color" href="resources.html">Resources</a></li>
        </ul>
     </div>
  </nav>
@@ -608,13 +609,13 @@
 
   </div><!--/container-fluid-->
 
-  <footer>
-    <div class="small-print">
-      <div class="container">
-        <p><a href="#">Terms &amp; Conditions</a> | <a href="#">Privacy Policy</a> | <a href="#">Contact</a></p>
-        <p>Copyright &copy; Ismail Hossain 2023 </p>
-      </div>
+  <footer class="footer mt-auto py-3" style="background: rgb(138, 8, 8);">
+    <div class="container">
+       <span class="text-light">
+          <p>&copy; 2024 All Rights Reserve to Ismail Hossain </p>
+       </span>
     </div>
-  </footer>
+ </footer>
+ 
 </body>
 </html>
