--- a/blog.html
+++ b/blog.html
@@ -7702,6 +7702,7 @@ all of MD as it is not optimized for dense, information rich UIs.
         </li>
         <li><a class="nav-link text-color" href="blog.html">Blog</a></li>
         <li><a class="nav-link text-color" href="gallery.html">Gallery</a></li>
+        <li><a class="nav-link text-color" href="resources.html">Resources</a></li>
       </ul>
     </div>
   </nav>
