Beam search added

--- a/resources.html
+++ b/resources.html
@@ -271,6 +271,38 @@
                                 </did>
                             </div>
                         </div>
+                        <br />
+                        <div class="card card-publication">
+                            <img class="card-img-top" style="width: 20%;" src="images/resources/pe2.png"
+                                alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    Foundations of NLP Explained Visually: Beam Search, How It Works
+                                </h5>
+                                <p class="card-text">
+                                    Many NLP applications such as machine translation, chatbots, text summarization, and language models generate some text as their output. In addition applications like image captioning or automatic speech recognition (ie. Speech-to-Text) output text, even though they may not be considered pure NLP applications.
+                                </p>
+                                <p style="font-size: small; color: rgb(132, 132, 149);">
+                                    April 1, 2021</p>
+                                <did class="d-flex justify-content-between">
+                                    <div>
+                                        <a class="btn btn-primary btn-sm"
+                                            href="https://towardsdatascience.com/foundations-of-nlp-explained-visually-beam-search-how-it-works-1586b9849a24"
+                                            role="button" aria-expanded="false" aria-controls="bib0">Read More</a>
+                                    </div>
+                                    <div>
+                                        <!-- <span class="badge badge-primary">Transformer</span> -->
+                                        <!-- <span class="badge badge-secondary">Secondary</span> -->
+                                        <span class="badge badge-success">Beam Search</span>
+                                        <!-- <span class="badge badge-danger">Danger</span> -->
+                                        <span class="badge badge-warning">NLP</span>
+                                        <!-- <span class="badge badge-info">Machine Translation</span> -->
+                                        <!-- <span class="badge badge-light">Light</span> -->
+                                        <!-- <span class="badge badge-primary">kazemnejad</span> -->
+                                    </div>
+                                </did>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div><!--/Center Column-->
