more blog referece url added for Beam Search

--- a/resources.html
+++ b/resources.html
@@ -273,7 +273,39 @@
                         </div>
                         <br />
                         <div class="card card-publication">
-                            <img class="card-img-top" style="width: 20%;" src="images/resources/pe2.png"
+                            <img class="card-img-top" style="width: 20%;" src="images/resources/bs.png"
+                                alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    BEAM Search
+                                </h5>
+                                <p class="card-text">
+                                    BEAM Search, a variant of breadth-first Search, is an algorithm that searches a weighted graph for an optimal path from some start node S to some goal node G. The difference between BEAM search and breadth-first search is that at every level of the search tree, only the top β candidates are chosen for further exploration. Here, β is known as the beam width. The reasoning behind this is that a path from S to G is likely to pass through some top number of most promising nodes. 
+                                </p>
+                                <p style="font-size: small; color: rgb(132, 132, 149);">
+                                    Jun 5, 2023</p>
+                                <did class="d-flex justify-content-between">
+                                    <div>
+                                        <a class="btn btn-primary btn-sm"
+                                            href="https://www.codecademy.com/resources/docs/ai/search-algorithms/beam-search"
+                                            role="button" aria-expanded="false" aria-controls="bib0">Read More</a>
+                                    </div>
+                                    <div>
+                                        <!-- <span class="badge badge-primary">Transformer</span> -->
+                                        <!-- <span class="badge badge-secondary">Secondary</span> -->
+                                        <span class="badge badge-success">Beam Search</span>
+                                        <!-- <span class="badge badge-danger">Danger</span> -->
+                                        <span class="badge badge-warning">NLP</span>
+                                        <!-- <span class="badge badge-info">Machine Translation</span> -->
+                                        <!-- <span class="badge badge-light">Light</span> -->
+                                        <span class="badge badge-primary">Codecademy</span>
+                                    </div>
+                                </did>
+                            </div>
+                        </div>
+                        <br />
+                        <div class="card card-publication">
+                            <img class="card-img-top" style="width: 20%;" src="images/resources/bs1.png"
                                 alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">
@@ -298,7 +330,7 @@
                                         <span class="badge badge-warning">NLP</span>
                                         <!-- <span class="badge badge-info">Machine Translation</span> -->
                                         <!-- <span class="badge badge-light">Light</span> -->
-                                        <!-- <span class="badge badge-primary">kazemnejad</span> -->
+                                        <span class="badge badge-primary">Towardsdatascience</span>
                                     </div>
                                 </did>
                             </div>
