--- a/education.html
+++ b/education.html
@@ -146,20 +146,120 @@
             <h5>Education</h5>
             <ul class="ul-dates">
                <li>
-                  <div class="content">
-                     <b>Ph.D. in Computer Science</b><br><span class="duration"></span>
-                     <div><i>(Fall 2022 - Current)</i>
+                  <div class="d-flex justify-content-between">
+                     <div class="content">
+                        <b>Ph.D. in Computer Science</b><br><span class="duration"></span>
+                        <div><i>(Fall 2022 - Current)</i>
+                        </div>
+                        <div><i>Souther Illinois University, Carbondale</i>
+                        </div>
+                        <div>
+                           Illinois, USA.
+                        </div>
                      </div>
-                     <div><i>Souther Illinois University, Carbondale</i>
+                      <!--Google map-->
+                      <div class="row">
+                        <div class="col-sm-4">
+                           <img src="images/education/siu-logo.png" width="90" height="50"/>
+                        </div>
+                        <div class="col-sm-3">
+                           <div id="map-container-google-2" class="z-depth-1-half map-container" style="height: 100px">
+                              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12625.994600513983!2d-89.2229983!3d37.7079717!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8877123ce908fc03%3A0x9698c489b70030d3!2sSouthern%20Illinois%20University!5e0!3m2!1sen!2sus!4v1710790290260!5m2!1sen!2sus" 
+                              width="200" height="90" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                           </div>
+                        </div>
                      </div>
                   </div>
                </li>
                <li>
-                  <div class="content">
-                     <b>B.S. in Computer Science & Engineering</b><br><span class="duration"></span>
-                     <div><i>(March 2014 - November 2018)</i>
+                  <div class="d-flex justify-content-between">
+                     <div class="content">
+                        <b>B.S. in Computer Science & Engineering</b><br><span class="duration"></span>
+                        <div><i>(March 2014 - November 2018)</i>
+                        </div>
+                        <div><i>Chittagong University of Engineering & Technology (CUET)</i>
+                        </div>
+                        <div>
+                           Chittagong, Bangladesh.
+                        </div>
                      </div>
-                     <div><i>Chittagong University of Engineering & Technology (CUET)</i>
+                     <!--Google map-->
+                     <div class="row">
+                        <div class="col-sm-4">
+                           <img src="images/education/cuet-logo.png" width="90" height="90"/>
+                        </div>
+                        <div class="col-sm-3">
+                           <div id="map-container-google-2" class="z-depth-1-half map-container" style="height: 100px">
+                              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d939784.0153794781!2d90.51159494297427!3d23.059313671942245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30ad2fca34ae5549%3A0x35c88a37b3e90e97!2sChittagong%20University%20of%20Engineering%20and%20Technology%20(CUET)!5e0!3m2!1sen!2sus!4v1710789911554!5m2!1sen!2sus"
+                               width="200" height="90" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </li>
+               <li>
+                  <div class="d-flex justify-content-between">
+                     <div class="content">
+                        <b>Higher Secondary Certificate (HSC)</b><br><span class="duration"></span>
+                        <div><i>(June 2011 - June 2013)</i>
+                        </div>
+                        <div><i>Birshrestha Noor Mohammad Public College</i>
+                        </div>
+                        <div>
+                           Dhaka, Bangladesh.
+                        </div>
+                     </div>
+                     <!--Google map-->
+                     <div class="row">
+                        <div class="col-sm-4">
+                           <img src="images/education/nm-clg-logo.png" width="90" height="90"/>
+                        </div>
+                        <div class="col-sm-3">
+                           <div id="map-container-google-2" class="z-depth-1-half map-container" style="height: 100px">
+                              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58422.74243356788!2d90.35071363504076!3d23.768003838973385!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755bf33f166b779%3A0x8568dda83da3b8a8!2sBirshreshtha%20Noor%20Mohammad%20Public%20College!5e0!3m2!1sen!2sus!4v1710789689492!5m2!1sen!2sus"
+                              width="200" height="90" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </li>
+               <li>
+                  <div class="d-flex justify-content-between">
+                     <div class="content">
+                        <b>Secondary School Certificate (SSC)</b><br><span class="duration"></span>
+                        <div><i>(January 2006 - March 2011)</i>
+                        </div>
+                        <div><i>Chatkhil P.G. Govt. High School</i>
+                        </div>
+                        <div>
+                           Noakhali, Bangladesh.
+                        </div>
+                     </div>
+                     <!--Google map-->
+                     <div class="row">
+                        <div class="col-sm-4">
+                           <img src="images/education/pg-logo.png" width="90" height="90"/>
+                        </div>
+                        <div class="col-sm-3">
+                           <div id="map-container-google-2" class="z-depth-1-half map-container" style="height: 100px">
+                              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d468623.18706755264!2d90.4580826177842!3d23.4200807692972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3754969d04cf15bf%3A0xe959e0422e4182eb!2sChatkhil%20P.%20G.%20Government%20High%20School!5e0!3m2!1sen!2sus!4v1710788589998!5m2!1sen!2sus" 
+                              width="200" height="90" style="border:0;" allowfullscreen="" 
+                              loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            </div>
+                        </div>
+                     </div>
+                  </div>
+               </li>
+
+               <li>
+                  <div class="content">
+                     <b>Primary School Certificate (PSC)</b><br><span class="duration"></span>
+                     <div><i>(January 2002 - December 2005)</i>
+                     </div>
+                     <div><i>Onirban Shikshma Niketan</i>
+                     </div>
+                     <div>
+                        Noakhali, Bangladesh.
                      </div>
                   </div>
                </li>
