some images changes and update section added

--- a/achievements.html
+++ b/achievements.html
@@ -93,9 +93,9 @@
             <div class="col-md-3">
 
                 <div class="card">
-                   <img src="images/profile-ismail.jpg" class="rounded-circle shadow-4-strong mx-auto profile-img"
+                   <img src="images/profile2.jpg" class="rounded-circle shadow-4-strong mx-auto profile-img"
                       alt="Cinque Terre">
-                   <!-- <img src="images/profile-ismail.jpg" class="card-img-top" alt="..."> -->
+                   <!-- <img src="images/profile2.jpg" class="card-img-top" alt="..."> -->
                    <div class="card-body">
                       <h5 class="card-title" style="text-align: center;">Ismail Hossain</h5>
                       <div class="card-text" style="text-align: center;">
