--- a/resources.html
+++ b/resources.html
@@ -11,7 +11,7 @@
     <META NAME="ROBOTS" CONTENT="INDEX, FOLLOW">
     <meta name="description" content="#" />
     <meta property="og:title" content="About | Ismail Hossain">
-    <meta property="og:image" content="images/profile-ismail.jpg">
+    <meta property="og:image" content="images/profile2.jpg">
     <meta property="og:description" content="#">
     <title>Publication | Ismail Hossain</title>
 
@@ -101,9 +101,9 @@
             <div class="col-md-3">
 
                 <div class="card">
-                    <img src="images/profile-ismail.jpg" class="rounded-circle shadow-4-strong mx-auto profile-img"
+                    <img src="images/profile2.jpg" class="rounded-circle shadow-4-strong mx-auto profile-img"
                         alt="Cinque Terre">
-                    <!-- <img src="images/profile-ismail.jpg" class="card-img-top" alt="..."> -->
+                    <!-- <img src="images/profile2.jpg" class="card-img-top" alt="..."> -->
                     <div class="card-body">
                         <h5 class="card-title" style="text-align: center;">Ismail Hossain</h5>
                         <div class="card-text" style="text-align: center;">
@@ -331,6 +331,40 @@
                                         <!-- <span class="badge badge-info">Machine Translation</span> -->
                                         <!-- <span class="badge badge-light">Light</span> -->
                                         <span class="badge badge-primary">Towardsdatascience</span>
+                                    </div>
+                                </did>
+                            </div>
+                        </div>
+                        <br />
+                        <div class="card card-publication">
+                            <img class="card-img-top" style="width: 20%;" src="images/resources/bs1.png"
+                                alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    Unmasking BERT: The Key to Transformer Model Performance
+                                </h5>
+                                <p class="card-text">
+                                    It seems clear that at the moment, practice is far ahead of theory in the technological life cycle of Deep Learning for NLP. We’re using approaches like masking which seem to work, and we fiddle with the numbers a bit and it works a little better or a little worse. Yet we can’t fully explain why that happens! 
+
+                                    Some people may find this frustrating and disappointing. If we can’t explain it, then how can we use it? 
+                                </p>
+                                <p style="font-size: small; color: rgb(132, 132, 149);">
+                                    August 18, 2023</p>
+                                <did class="d-flex justify-content-between">
+                                    <div>
+                                        <a class="btn btn-primary btn-sm"
+                                            href="https://towardsdatascience.com/foundations-of-nlp-explained-visually-beam-search-how-it-works-1586b9849a24"
+                                            role="button" aria-expanded="false" aria-controls="bib0">Read More</a>
+                                    </div>
+                                    <div>
+                                        <span class="badge badge-primary">BERT</span>
+                                        <!-- <span class="badge badge-secondary">Secondary</span> -->
+                                        <!-- <span class="badge badge-success">Beam Search</span> -->
+                                        <span class="badge badge-danger">Masking</span>
+                                        <span class="badge badge-warning">NLP</span>
+                                        <!-- <span class="badge badge-info">BERT</span> -->
+                                        <!-- <span class="badge badge-light">Masking</span> -->
+                                        <span class="badge badge-info">neptune.ai</span>
                                     </div>
                                 </did>
                             </div>
