--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+   <!-- <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet"> -->
 
    <style>
       #more {
@@ -95,9 +96,9 @@
          <div class="col-md-3">
 
             <div class="card">
-               <img src="images/profile-ismail.jpg" class="rounded-circle shadow-4-strong mx-auto profile-img"
+               <img src="images/profile2.jpg" class="rounded-circle shadow-4-strong mx-auto profile-img"
                   alt="Cinque Terre">
-               <!-- <img src="images/profile-ismail.jpg" class="card-img-top" alt="..."> -->
+               <!-- <img src="images/profile2.jpg" class="card-img-top" alt="..."> -->
                <div class="card-body">
                   <h5 class="card-title" style="text-align: center;">Ismail Hossain</h5>
                   <div class="card-text" style="text-align: center;">
@@ -149,6 +150,12 @@
             <div id="carouselExampleControls" class="carousel slide border border-secondary" data-ride="carousel">
                <div class="carousel-inner">
                   <div class="carousel-item active">
+                     <img class="d-block w-100 slider-img" src="images/figures/18.jpg" alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
+                     <img class="d-block w-100 slider-img" src="images/figures/17.png" alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
                      <img class="d-block w-100 slider-img" src="images/figures/13.svg" alt="Second slide">
                   </div>
                   <div class="carousel-item">
@@ -275,8 +282,36 @@
                </div>
             </div> -->
          </div>
-         <div class="col-md-3 col-xs-5">
+         <div class="col-md-3 col-xs-8">
+            <h5>UPDATES</h5>
+            <div class="overflow-auto p-3 bg-body-tertiary"
+            style="max-height: 800px;">
+               <div class="list-group">
+                  <a href="https://www.icwsm.org/2024/index.html/" class="list-group-item list-group-item-action flex-column align-items-start active">
+                  <div class="d-flex w-100 justify-content-between">
+                     <h5 class="mb-1">ICWSM'24 AAAI</h5>
+                     <small>June 3-6, 2024</small>
+                  </div>
+                  <p class="mb-1">THE 18TH INTERNATIONAL
+                     AAAI CONFERENCE
+                     ON WEB AND SOCIAL MEDIA</p>
+                  <small><span class="material-icons">
+                     <img src="images/icons/location_on_20dp.svg" alt=""/>
+                     </span>Buffalo, New York, USA.</small>
+                  </a>
 
+                  <a href="https://cyberforce.energy.gov/cyberforce-competition/prior-competitions/doe-cyberforce-competition-2023/" class="list-group-item list-group-item-action flex-column align-items-start">
+                     <div class="d-flex w-100 justify-content-between">
+                        <h5 class="mb-1">CyberForce 2023</h5>
+                        <small>Oct 16-Nov 03, 2023</small>
+                     </div>
+                     <p class="mb-1">DOE CyberForce Competition® 2023</p>
+                     <small><span class="material-icons">
+                        <img src="images/icons/location_on_20dp.svg" alt=""/>
+                        </span>St. Charles, Illinois, USA.</small>
+                     </a>
+               </div>
+            </div>
          </div>
       </div>
 
@@ -287,7 +322,6 @@
             </span>
          </div>
       </footer>
-      
       <!-- <include src="footer.html"></include> -->
 
       <!-- <link href="footer.html" rel="import" /> -->
