new update added

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                <div class="list-group">
                   <a href="https://www.icwsm.org/2024/index.html/" class="list-group-item list-group-item-action flex-column align-items-start active">
                   <div class="d-flex w-100 justify-content-between">
-                     <h5 class="mb-1">ICWSM'24 AAAI</h5>
+                     <h6 class="mb-1">ICWSM'24 AAAI</h6>
                      <small>June 3-6, 2024</small>
                   </div>
                   <p class="mb-1">THE 18TH INTERNATIONAL
@@ -302,14 +302,25 @@
 
                   <a href="https://cyberforce.energy.gov/cyberforce-competition/prior-competitions/doe-cyberforce-competition-2023/" class="list-group-item list-group-item-action flex-column align-items-start">
                      <div class="d-flex w-100 justify-content-between">
-                        <h5 class="mb-1">CyberForce 2023</h5>
+                        <h6 class="mb-1">CyberForce 2023</h6>
                         <small>Oct 16-Nov 03, 2023</small>
                      </div>
                      <p class="mb-1">DOE CyberForce Competition® 2023</p>
                      <small><span class="material-icons">
                         <img src="images/icons/location_on_20dp.svg" alt=""/>
                         </span>St. Charles, Illinois, USA.</small>
-                     </a>
+                  </a>
+
+                  <a href="https://cyberforce.energy.gov/cyberforce-competition/prior-competitions/doe-cyberforce-competition-2022/" class="list-group-item list-group-item-action flex-column align-items-start">
+                     <div class="d-flex w-100 justify-content-between">
+                        <h6 class="mb-1">CyberForce 2022</h6>
+                        <small>Oct 20-Nov 07, 2022</small>
+                     </div>
+                     <p class="mb-1">DOE CyberForce Competition® 2022</p>
+                     <small><span class="material-icons">
+                        <img src="images/icons/location_on_20dp.svg" alt=""/>
+                        </span>Virtual</small>
+                  </a>
                </div>
             </div>
          </div>
