--- a/index.html
+++ b/index.html
@@ -165,6 +165,12 @@
                      <img class="d-block w-100 slider-img" src="images/figures/15.svg" alt="First slide">
                   </div>
                   <div class="carousel-item">
+                     <img class="d-block w-100 slider-img" src="images/figures/19.png" alt="First slide">
+                  </div>
+                  <div class="carousel-item">
+                     <img class="d-block w-100 slider-img" src="images/figures/20.png" alt="First slide">
+                  </div>
+                  <div class="carousel-item">
                      <img class="d-block w-100 slider-img" src="images/figures/16.png" alt="First slide">
                   </div>
                   <div class="carousel-item">
