added new publication

--- a/publication.html
+++ b/publication.html
@@ -163,6 +163,39 @@
             <div class="contentText">
               <h6><strong>Conference Papers</strong></h6>
             </div>
+
+            <div class="card card-publication">
+              <img class="card-img-top" style="width: 20%;" src="images/papers/paper7.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">SCALE: Self-regulated Clustered federAted LEarning in a Homogeneous Environment</h5>
+                <p class="card-text"><strong>Ismail Hossain</strong>, Sai Puppala, Md. Jahangir Alam, and Talukder Sajedul</p>
+                <p style="font-size: small; color: rgb(132, 132, 149);">COMPSAC 2024: IEEE Computer Society Signature Conference on Computers, Software, and Applications</p>
+                <a class="btn btn-primary btn-sm" data-toggle="collapse" href="#abs7" role="button" 
+                aria-expanded="false" aria-controls="abs0">Abstract</a>
+                <a class="btn btn-secondary btn-sm" data-toggle="collapse" href="#bib7" role="button" 
+                aria-expanded="false" aria-controls="bib7">Bibtext</a>
+                <a class="btn btn-danger btn-sm" href="#" role="button" 
+                aria-expanded="false" aria-controls="bib7">PDF</a>
+              </div>
+            </div>
+            <div class="collapse multi-collapse" id="abs7">
+              <div class="card card-body" style="background-color: rgb(38, 38, 39); color: white;">
+                Federated Learning (FL) has emerged as a transformative approach for enabling distributed machine learning while preserving user privacy, yet it faces challenges like communication inefficiencies and reliance on centralized infrastructures, leading to increased latency and costs. This paper presents a novel FL methodology that overcomes these limitations by eliminating the dependency on edge servers, employing a server-assisted Proximity Evaluation for dynamic cluster formation based on data similarity, performance indices, and geographical proximity. Our integrated approach enhances operational efficiency and scalability through a Hybrid Decentralized Aggregation Protocol, which merges local model training with peer-to-peer weight exchange and a centralized final aggregation managed by a dynamically elected driver node, significantly curtailing global communication overhead. Additionally, the methodology includes Decentralized Driver Selection, Check-pointing to reduce network traffic, and a Health Status Verification Mechanism for system robustness. Validated using the breast cancer dataset, our architecture not only demonstrates a nearly tenfold reduction in communication overhead but also shows remarkable improvements in reducing training latency and energy consumption while maintaining high learning performance, offering a scalable, efficient, and privacy-preserving solution for the future of federated learning ecosystems.
+              </div>
+            </div>
+            <div class="collapse multi-collapse" id="bib7">
+              <div class="card card-body border border-dark">
+                <pre>
+                  <!-- @article{hossain2023monitoring,
+                    title={Monitoring Dynamics of Emotional Sentiment in Social Network Commentaries},
+                    author={Hossain, Ismail and Puppala, Sai and Alam, Md Jahangir and and Talukder, Sajedul},
+                    year={2023}
+                  } -->
+                </pre>
+              </div>
+            </div>
+            <br />
+
             <div class="card card-publication">
               <img class="card-img-top" style="width: 20%;" src="images/papers/paper6.png" alt="Card image cap">
               <div class="card-body">
