Contents added into update section

--- a/index.html
+++ b/index.html
@@ -293,7 +293,19 @@
             <div class="overflow-auto p-3 bg-body-tertiary"
             style="max-height: 800px;">
                <div class="list-group">
-                  <a href="https://www.icwsm.org/2024/index.html/" class="list-group-item list-group-item-action flex-column align-items-start active">
+                  <a href="https://ieeecompsac.computer.org/2024/" class="list-group-item list-group-item-action flex-column align-items-start active">
+                     <div class="d-flex w-100 justify-content-between">
+                        <h6 class="mb-1">COMPSAC 2024</h6>
+                        <small></small>
+                     </div>
+                     <p class="mb-1">Four of our papers got accepted in IEEE COMPSAC 2024, one of the top-tier conferences in social network analysis.</p>
+                     <div>
+                        <span class="badge badge-success">Accepted</span>
+                        <span class="badge badge-primary">IEEE</span>
+                     </div>
+                  </a>
+
+                  <a href="https://www.icwsm.org/2024/index.html/" class="list-group-item list-group-item-action flex-column align-items-start">
                   <div class="d-flex w-100 justify-content-between">
                      <h6 class="mb-1">ICWSM'24 AAAI</h6>
                      <small>June 3-6, 2024</small>
@@ -317,6 +329,80 @@
                         </span>St. Charles, Illinois, USA.</small>
                   </a>
 
+                  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+                     <div class="d-flex w-100 justify-content-between">
+                        <h6 class="mb-1">ACM/IEEE ASONAM 2023</h6>
+                        <small></small>
+                     </div>
+                     <p class="mb-1">Three of our papers got accepted in ACM/IEEE ASONAM 2023, one of the top-tier conferences in social network analysis.</p>
+                     <div>
+                        <span class="badge badge-success">Published</span>
+                        <span class="badge badge-primary">IEEE</span>
+                        <span class="badge badge-secondary">ACM</span>
+                     </div>
+                  </a>
+
+                  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+                  <div class="d-flex w-100 justify-content-between">
+                     <h6 class="mb-1">Data-driven approaches to Medical Imaging</h6>
+                     <small></small>
+                  </div>
+                  <p class="mb-1">Seven of our book chapters got published in the book "Data-driven approaches to Medical Imaging" by Springer.</p>
+                     <div>
+                        <span class="badge badge-success">Published</span>
+                        <span class="badge badge-primary">Springer</span>
+                     </div>
+                  </a>
+
+                  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+                  <div class="d-flex w-100 justify-content-between">
+                     <h6 class="mb-1">Expert Opinion on Cybersecurity and Ransomware</h6>
+                     <small></small>
+                  </div>
+                  <p class="mb-1">Our Professor Dr. Sajedul Talukder was contacted by KMOV (Channel 4), a prominent television station in St. Louis, Missouri, affiliated with CBS and MyNetworkTV to provide expert opinion on cybersecurity and ransomware.</p>
+                  <small><span class="material-icons">
+                     <img src="images/icons/location_on_20dp.svg" alt=""/>
+                  </span>St. Louis, Missouri, USA.</small>
+                     <div>
+                        <span class="badge badge-danger">TV Interview</span>
+                     </div>
+                  </a>
+
+                  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+                  <div class="d-flex w-100 justify-content-between">
+                     <h6 class="mb-1">ANS Transactions</h6>
+                     <small></small>
+                  </div>
+                  <p class="mb-1">Two papers published in ANS Transactions in ANS Winter Conference and Expo 2023.</p>
+                  <div>
+                     <span class="badge badge-success">Published</span>
+                  </div>
+                  </a>
+
+                  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+                  <div class="d-flex w-100 justify-content-between">
+                     <h6 class="mb-1">IEEE ICAIC 2023</h6>
+                     <small></small>
+                  </div>
+                  <p class="mb-1">Two papers published in IEEE International Conference on AI in Cybersecurity (ICAIC 2023).</p>
+                  <div>
+                     <span class="badge badge-success">Published</span>
+                     <span class="badge badge-primary">IEEE</span>
+                  </div>
+                  </a>
+
+                  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+                  <div class="d-flex w-100 justify-content-between">
+                     <h6 class="mb-1">Blockchain and Smart-Contract Technologies</h6>
+                     <small></small>
+                  </div>
+                  <p class="mb-1">Two book chapters published in the book "Blockchain and Smart-Contract Technologies for Innovative Applications" by Springer.</p>
+                  <div>
+                     <span class="badge badge-success">Published</span>
+                     <span class="badge badge-primary">Springer</span>
+                  </div>
+                  </a>
+
                   <a href="https://cyberforce.energy.gov/cyberforce-competition/prior-competitions/doe-cyberforce-competition-2022/" class="list-group-item list-group-item-action flex-column align-items-start">
                      <div class="d-flex w-100 justify-content-between">
                         <h6 class="mb-1">CyberForce 2022</h6>
@@ -325,7 +411,10 @@
                      <p class="mb-1">DOE CyberForce Competition® 2022</p>
                      <small><span class="material-icons">
                         <img src="images/icons/location_on_20dp.svg" alt=""/>
-                        </span>Virtual</small>
+                        </span>Virtual
+                        <span class="badge badge-success">Rank: 16th</span>
+                     </small>
+
                   </a>
                </div>
             </div>
