content added in updates section

--- a/index.html
+++ b/index.html
@@ -316,6 +316,11 @@
                   <small><span class="material-icons">
                      <img src="images/icons/location_on_20dp.svg" alt=""/>
                      </span>Buffalo, New York, USA.</small>
+                     <div>
+                        <span class="badge badge-primary">Conference</span>
+                        <span class="badge badge-secondary">ICWSM</span>
+                        <span class="badge badge-success">AAAI</span>
+                     </div>
                   </a>
 
                   <a href="https://cyberforce.energy.gov/cyberforce-competition/prior-competitions/doe-cyberforce-competition-2023/" class="list-group-item list-group-item-action flex-column align-items-start">
@@ -327,6 +332,9 @@
                      <small><span class="material-icons">
                         <img src="images/icons/location_on_20dp.svg" alt=""/>
                         </span>St. Charles, Illinois, USA.</small>
+                        <div>
+                           <span class="badge badge-primary">Competition</span>
+                        </div>
                   </a>
 
                   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
@@ -412,9 +420,11 @@
                      <small><span class="material-icons">
                         <img src="images/icons/location_on_20dp.svg" alt=""/>
                         </span>Virtual
-                        <span class="badge badge-success">Rank: 16th</span>
                      </small>
-
+                        <div>
+                           <span class="badge badge-primary">Competition</span>
+                           <span class="badge badge-success">Rank: 16th</span>
+                        </div>
                   </a>
                </div>
             </div>
