--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
             <div id="carouselExampleControls" class="carousel slide border border-secondary" data-ride="carousel">
                <div class="carousel-inner">
                   <div class="carousel-item active">
-                     <img class="d-block w-100 slider-img" src="images/figures/18.jpg" alt="Second slide">
+                     <img class="d-block w-100 slider-img" 
+                     src="images/figures/18.jpg" alt="Second slide">
                   </div>
                   <div class="carousel-item">
                      <img class="d-block w-100 slider-img" src="images/figures/17.png" alt="Second slide">
@@ -293,7 +294,20 @@
             <div class="overflow-auto p-3 bg-body-tertiary"
             style="max-height: 800px;">
                <div class="list-group">
+
                   <a href="https://ieeecompsac.computer.org/2024/" class="list-group-item list-group-item-action flex-column align-items-start active">
+                     <div class="d-flex w-100 justify-content-between">
+                        <h6 class="mb-1">ASONAM 2024</h6>
+                        <small></small>
+                     </div>
+                     <p class="mb-1">Six of our papers got accepted in Spring ASONAM 2024, one of the top-tier conferences in social network analysis.</p>
+                     <div>
+                        <span class="badge badge-success">Accepted</span>
+                        <span class="badge badge-primary">Springer</span>
+                     </div>
+                  </a>
+
+                  <a href="https://ieeecompsac.computer.org/2024/" class="list-group-item list-group-item-action flex-column align-items-start">
                      <div class="d-flex w-100 justify-content-between">
                         <h6 class="mb-1">COMPSAC 2024</h6>
                         <small></small>
